chore: install contentlayer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
     "baseUrl": ".",
     "paths": {
       "contentlayer/generated": ["./.contentlayer/generated"]
-    }       
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".contentlayer/generated"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.mjs", ".contentlayer/generated"],
   "exclude": ["node_modules"]
 }
