--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "contentlayer": "^0.2.7",
     "date-fns": "^2.29.1",
     "next": "12.2.4",
+    "next-contentlayer": "^0.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
